# backend-auth-lab

./: pyproject.toml
src/: __init__.py  main.py  middleware.py
src/config/: __init__.py
src/routers/: authentication.py  basic_auth.py  jwt_auth.py  session_auth.py  users.py
src/security/: __init__.py  auth_strategies.py  encrypt_password.py  get_auth_strategy.py
