[project]
name = "agendadoc-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.127.1",
    "itsdangerous>=2.2.0",
    "psycopg2>=2.9.11",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlmodel>=0.0.30",
]
